--- a/MonsterBattle/MonsterBattle/MonsterBattle.csproj
+++ b/MonsterBattle/MonsterBattle/MonsterBattle.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BagForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BagForm.Designer.cs">
+      <DependentUpon>BagForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="BattleForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SwitchForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SwitchForm.Designer.cs">
+      <DependentUpon>SwitchForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="BagForm.resx">
+      <DependentUpon>BagForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BattleForm.resx">
       <DependentUpon>BattleForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +82,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SwitchForm.resx">
+      <DependentUpon>SwitchForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -190,6 +208,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\voltorb sprite.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\switch_interface.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
